@@ -1,5 +1,14 @@
 2002-10-26  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* lib/kernel32/process/create.c (_except_handler): New function.
+	(BaseProcessStart): Ditto.
+	(KlCreateFirstThread): Return INVALID_HANDLE_VALUE on error; Call
+	BaseProcessStart() before process entry point.
+	* lib/kernel32/thread/thread.c (_except_handler): New function.
+	(ThreadStartup): Protect thread using SEH constructs.
+
+2002-10-26  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* include/ddk/zw.h (NtProcessStartup): Use standard calling convention.
 	* subsys/csrss/csrss.c (NtProcessStartup): Ditto.
 	* subsys/smss/smss.c (NtProcessStartup): Ditto.
